--- a/docs/debugging.adoc
+++ b/docs/debugging.adoc
@@ -43,7 +43,7 @@ Click **Save** to save this configuration, and then click **Debug** to attach th
 
 == Test app
 
-You can switch between the debug pane and the Terminal panes using the small icons: the image:termbox.png[Box,30] icon is for your Terminals, and the image:bugicon.png[Bug,30] icon is for the debugger. Click image:box.png[Box,30] to go back to your terminal(s), and open a Terminal and run:
+You can switch between the debug pane and the Terminal panes using the small icons: the image:termbox.png[Box] icon is for your Terminals, and the image:bugicon.png[Bug] icon is for the debugger. Click image:termbox.png[Box] to go back to your terminal(s), and open a Terminal and run:
 
 [source,sh,role="copypaste"]
 ----
@@ -54,7 +54,7 @@ Although we were expecting `o`, we got nothing. There is something wrong with ou
 
 == Set a Breakpoint
 
-Click image:bugicon.png[Bug,30] to go back to the debugger.
+Click image:bugicon.png[Bug] to go back to the debugger.
 
 To debug the app, let's step through our function that has the bug. In the left gutter of the code, where the line numbers are shown, click once on the line number next to `int len = name.length();` to set a breakpoint. The line number will be highlighted and the breakpoint will be registered in the debug pane:
 
@@ -62,14 +62,14 @@ image::break.png[breakpoint,800]
 
 == Trigger the bug
 
-Now that we have a breakpoint, click image:box.png[Box,30] to return to the terminal. In the Terminal issue the same `curl` command as before:
+Now that we have a breakpoint, click image:termbox.png[Box] to return to the terminal. In the Terminal issue the same `curl` command as before:
 
 [source, sh, role="copypaste"]
 ----
 curl http://localhost:8080/hello/lastletter/foo
 ----
 
-This time, the command will appear to hang as the breakpoint has been reached. The line where you set the breakpoint will be highlighted. Click image:bugicon.png[Bug,30] to go back to the debugger, which has paused the execution at the breakpoint:
+This time, the command will appear to hang as the breakpoint has been reached. The line where you set the breakpoint will be highlighted. Click image:bugicon.png[Bug] to go back to the debugger, which has paused the execution at the breakpoint:
 
 image::breakreached.png[breakpointreached]
 
@@ -81,17 +81,17 @@ You will see three main sections of the debug view:
 
 * **Variables** - Here you can see the value of local variables in the selected stack frame. In our code we have no local variables defined yet, but once we start stepping through the code, newly defined variables (like `len`) will appear here.
 
-Step over the current line by clicking image:stepover.png[stepover,30] ("Step Over"). This will fully execute the current line, and advance to the next line in the code and stop again. (You could also step _into_ methods for deeper debugging).
+Step over the current line by clicking image:stepover.png[stepover] ("Step Over"). This will fully execute the current line, and advance to the next line in the code and stop again. (You could also step _into_ methods for deeper debugging).
 
 At this point, `len` is defined (and listed on the right side):
 
 image::len.png[length, 200]
 
-Click image:stepover.png[stepover,30] again, which executes the line to grab the last letter using `len` an offset to the `substring` method. See the bug? Look at the value of `lastLetter` in the variables list on the right - it's empty!
+Click image:stepover.png[stepover] again, which executes the line to grab the last letter using `len` an offset to the `substring` method. See the bug? Look at the value of `lastLetter` in the variables list on the right - it's empty!
 
 We need to pass an offset that is one _before_ the end, to get the last letter.
 
-Click image:resume.png[resume,30] ("Resume") to let the method continue and return the value (your `curl` command has probably timed out by now).
+Click image:resume.png[resume] ("Resume") to let the method continue and return the value (your `curl` command has probably timed out by now).
 
 Fix the code by changing the line that calls `substring()` to read:
 
@@ -113,7 +113,7 @@ Remove the breakpoint by clicking on the line number again to de-highlight it.  
 
 ::img
 
-Click image:end.png[end,30] ("End Debug Session") button to quit the debugging session.
+Click image:end.png[end] ("End Debug Session") button to quit the debugging session.
 
 Quarkus apps are just like any other Java app, so debugging is straightforward and supported by many IDEs and CLIs out there.
 
