--- a/docs/debugging.adoc
+++ b/docs/debugging.adoc
@@ -43,7 +43,12 @@ Click **Save** to save this configuration, and then click **Debug** to attach th
 
 == Test app
 
-You can switch between the debug pane and the Terminal panes using the small icons to the left of the debugger window: the image:termbox.png[] icon is for your Terminals, and the image:bugicon.png[] icon is for the debugger. Click image:termbox.png[] to go back to your terminal(s), and open a Terminal and run:
+You can switch between the debug pane and the Terminal panes using the small icons to the left of the debugger window.
+
+Terminals: image:termbox.png[float="right"] icon is for your Terminals
+Debugger:  image:bugicon.png[float="right"] icon is for the debugger.
+
+Click the Terminal button to go back to your terminal(s), and open a Terminal and run:
 
 [source,sh,role="copypaste"]
 ----
