--- a/docs/debugging.adoc
+++ b/docs/debugging.adoc
@@ -45,9 +45,9 @@ You can switch between the debug pane and the Terminal panes using the small ico
 
 [NOTE]
 ====
-** Click this to go to your terminals image:termbox.png[float="left"]
+* Click this to go to your terminals image:termbox.png[float="left"]
 
-** Click this to show the Debug window image:bugicon.png[float="left"]
+* Click this to show the Debug window image:bugicon.png[float="left"]
 
 ====
 
